# abi-typegen

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  doublcov.config.json
.github/workflows/: ci.yml  coverage.yml  publish.yml  release.yml
crates/abi-typegen-codegen/: Cargo.toml
crates/abi-typegen-codegen/src/: abi_writer.rs  barrel.rs  lib.rs  type_mapper.rs
crates/abi-typegen-codegen/src/renderers/: csharp.rs  ethers5.rs  ethers6.rs  go.rs  kotlin.rs  mod.rs  python.rs  rust.rs  solidity.rs  swift.rs  viem.rs  wagmi.rs  web3js.rs  yaml.rs  zod.rs
crates/abi-typegen-config/: Cargo.toml
crates/abi-typegen-config/src/: config.rs  lib.rs
crates/abi-typegen-core/: Cargo.toml
crates/abi-typegen-core/src/: lib.rs  parser.rs  types.rs
docs/: comparison.md  configuration.md  forge-integration.md  generated-output.md
e2e/: bench.sh
e2e/foundry-sample/: foundry.toml  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.zod.json
e2e/foundry-sample/out-solidity-validation/GeneratedInterfacesCheck.sol/: GeneratedInterfacesCheck.json
e2e/foundry-sample/out-solidity-validation/IEdgeCases.sol/: IEdgeCases.json
e2e/foundry-sample/out-solidity-validation/IExchange.sol/: IExchange.json
e2e/foundry-sample/out-solidity-validation/IRegistry.sol/: IRegistry.json
e2e/foundry-sample/out-solidity-validation/IToken.sol/: IToken.json
e2e/foundry-sample/out-solidity-validation/IVault.sol/: IVault.json
e2e/foundry-sample/out-solidity-validation/build-info/: 6aa5cb95fcfa10d1.json
e2e/foundry-sample/solidity-validation/: GeneratedInterfacesCheck.sol
e2e/foundry-sample/src/: EdgeCases.sol  Exchange.sol  Registry.sol  Vault.sol  validate-ethers.ts  validate-viem.ts  validate-zod.ts  validate.ts
e2e/foundry-sample/src/generated-solidity/: IEdgeCases.sol  IExchange.sol  IRegistry.sol  IToken.sol  IVault.sol  index.ts
e2e/foundry-sample/src/generated-zod/: EdgeCases.abi.ts  EdgeCases.zod.ts  Exchange.abi.ts  Exchange.zod.ts  Registry.abi.ts  Registry.zod.ts  Token.abi.ts  Token.zod.ts  Vault.abi.ts  Vault.zod.ts  index.ts
e2e/hardhat-sample/: hardhat.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
e2e/hardhat-sample/contracts/: Token.sol
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_barrel.rs  fuzz_codegen_full.rs  fuzz_config_toml.rs  fuzz_parse_artifact.rs  fuzz_sol_type_str.rs
fuzz/seeds/fuzz_codegen_full/: minimal.json
fuzz/seeds/fuzz_config_toml/: full  minimal
fuzz/seeds/fuzz_parse_artifact/: vault.json
fuzz/seeds/fuzz_sol_type_str/: address_arr  address_arr2  bytes32_fixed  int128  uint256  uint256_arr  uint256_fixed
npm/: eslint.config.mjs  package.json  pnpm-lock.yaml
npm/abi-typegen/: README.md  package.json
npm/abi-typegen/scripts/: install.mjs
npm/hardhat-abi-typegen/: README.md  index.cjs  package.json  type-extensions.d.ts
src/: fetch.rs  main.rs
src/tests/: mod.rs
tests/: integration_test.rs
tests/fixtures/: erc20.json
