[package]
name = "abi-typegen-codegen"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "TypeScript code generation for abi-typegen"
license = "MIT"
repository = "https://github.com/doublesharp/abi-typegen"

[dependencies]
abi-typegen-core = { version = "0.2.0", path = "../abi-typegen-core" }
abi-typegen-config = { version = "0.2.0", path = "../abi-typegen-config" }
serde_json = { workspace = true }
heck = { workspace = true }
