[package]
name = "abi-typegen-config"
version = "0.1.0"
edition = "2024"
description = "Configuration parsing for abi-typegen"
license = "MIT"
repository = "https://github.com/doublesharp/abi-typegen"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
