[package]
name = "abi-typegen-config"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Configuration parsing for abi-typegen"
license = "MIT"
repository = "https://github.com/doublesharp/abi-typegen"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
