[package]
name = "abi-typegen-core"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Core ABI parsing and IR types for abi-typegen"
license = "MIT"
repository = "https://github.com/doublesharp/abi-typegen"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
